# proysupermercado

./: DfToBd.py  Super_Optimizado.xlsx  alembic.ini  comparator.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  scraping.py  scrapingCarrefour.py
alembic/: env.py
alembic/versions/: 05dd93c35d56_agrego_columnas_en_tabla_productos.py  24f360dd18a2_cambio_en_los_modelos.py  3cd3fc204187_cambio_de_campo_a_link_producto.py  cd1cf773e90c_primeras_tablas.py
