[project]
name = "proy-super"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "ngrok>=1.5.0",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.13.0",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.42",
    "sqlalchemy-orm>=1.2.10",
    "textdistance>=4.6.3",
    "uvicorn>=0.35.0",
    "webdriver-manager>=4.0.2",
]
